<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ime" />

        <EditText
            android:id="@+id/ime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unos_imena"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prezime" />

        <EditText
            android:id="@+id/prezime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unos_prezimena"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"/>


        <!--Pozicija zaposlenog -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pozicija" />

        <EditText
            android:id="@+id/pozicija"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unos_pozicije"
            android:inputType="text"
            android:importantForAutofill="no"
            android:minHeight="48dp"/>

        <!-- Dugme za spremanje -->
        <Button
            android:id="@+id/save_zaposleni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sacuvaj"
            android:maxWidth="488dp"/>
    </LinearLayout>
</ScrollView>
