<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opcije"
        android:textAppearance="?attr/textAppearanceHeadline6" />
    <Button
        android:id="@+id/button_stavke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popisne_stavke" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/azuriraj" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obrisi" />

</LinearLayout>
