<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/nazivPopisneListeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naziv_popisne_liste"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nazivListe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unos_naziv_popisne_liste"
        android:importantForAutofill="no"
        android:padding="8dp"
        android:minHeight="48dp"/>


    <Button
        android:id="@+id/kreirajListuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sacuvaj"
        android:layout_marginTop="16dp"
        android:textSize="16sp" />




</LinearLayout>

